--- a/TP4_VI/.settings/io.sarl.lang.SARL.prefs
+++ b/TP4_VI/.settings/io.sarl.lang.SARL.prefs
@@ -1,5 +1,13 @@
 BuilderConfiguration.is_project_specific=true
+autobuilding=true
 eclipse.preferences.version=1
-is_project_specific=true
-outlet.DEFAULT_OUTPUT.cleanDirectory=true
+io.sarl.lang.SARL.useProjectSettings=true
+outlet.DEFAULT_OUTPUT.cleanDirectory=false
+outlet.DEFAULT_OUTPUT.cleanupDerived=true
+outlet.DEFAULT_OUTPUT.createDirectory=true
+outlet.DEFAULT_OUTPUT.derived=true
 outlet.DEFAULT_OUTPUT.directory=src/main/generated-sources/xtend
+outlet.DEFAULT_OUTPUT.hideLocalSyntheticVariables=true
+outlet.DEFAULT_OUTPUT.installDslAsPrimarySource=false
+outlet.DEFAULT_OUTPUT.keepLocalHistory=true
+outlet.DEFAULT_OUTPUT.override=true
